src/test/ui/feature-gates/feature-gate-const_generics-fn.rs
// gate-test-const_generics

fn foo<const X: ()>() {} //~ ERROR const generics are unstable

fn main() {}
